// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch Button (unit tests) when has a label should match the snapshot 1`] = `
<kv-text-field label="Text Field">
  <mock:shadow-root>
    <div class="text-field-container">
      <span class="label">
        Text Field
      </span>
      <div class="input-container">
        <input>
      </div>
      <div class="text-container"></div>
    </div>
  </mock:shadow-root>
</kv-text-field>
`;

exports[`Switch Button (unit tests) when is disabled should match the snapshot 1`] = `
<kv-text-field disabled="">
  <mock:shadow-root>
    <div class="text-field-container">
      <div class="input-container">
        <input disabled="">
      </div>
      <div class="text-container"></div>
    </div>
  </mock:shadow-root>
</kv-text-field>
`;

exports[`Switch Button (unit tests) when uses default props should match the snapshot 1`] = `
<kv-text-field>
  <mock:shadow-root>
    <div class="text-field-container">
      <div class="input-container">
        <input>
      </div>
      <div class="text-container"></div>
    </div>
  </mock:shadow-root>
</kv-text-field>
`;
